# Multimodal_EV_forecasting

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Test_notebook.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
dags/: daily_offline_ingest.py
data/raw/ride_data/sample_city/: sample_city_rides_2022_01.csv  sample_city_rides_2022_02.csv
docker/airflow/: Dockerfile  entrypoint.sh
docker/postgres/: init-airflow-db.sh
scripts/: streaming_simulator.py
