[project]
name = "multimodal-ev-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "feast>=0.49.0",
    "flake8>=7.2.0",
    "geopandas>=1.0.1",
    "isort>=6.0.1",
    "kafka-python>=2.2.10",
    "mlflow>=2.22.0",
    "openmeteo-requests>=1.5.0",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=17.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "python-dotenv==1.0.0",
    "redis>=6.1.0",
    "requests>=2.32.3",
    "rtree>=1.4.0",
    "ruff>=0.11.11",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "uvicorn>=0.34.0",
    "xgboost>=3.0.2",
]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = [  # keep only the families you care about
    "E", "F", "I",
    "B", "C4", "SIM", "UP",
    "D212"          # ← keep this doc-string rule if you like
]
ignore = [
    "D203",         # ⚠️  add this line
    "COM812",       # already conflicting
    "D211", "D213", # the opposite doc-string pair
    "D100", "D101"
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true